# minesweeper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: cmake.yml
include/: block.h  board.h  config.h  font.h  gl.h  guest.h  host.h  io.h  json.h  menu.hpp  network.h  sfml.hpp
src/: board.cpp  font.cpp  gl.cpp  guest.cpp  host.cpp  io.cpp  json.cpp  main.cpp  menu.cpp  network.cpp  sfml.cpp
